# playground_camera_model

./: CMakeLists.txt  README.md
.github/workflows/: unit_tests.yaml
apps/playground_camera_model/: CMakeLists.txt  main.cc  main.cc.autosave
cpp/: .gitignore
cpp/apps/playground_camera_model/: main.cc
cpp/libs/playground_camera_model/core/: CMakeLists.txt  camera_model.cc  camera_model.h  homogeneous_transformation_matrix.cc  homogeneous_transformation_matrix.h
libs/playground_camera_model/core/: CMakeLists.txt  camera_model.cc  camera_model.h  gnuplot.cc  gnuplot.h  homogeneous_transformation_matrix.cc  homogeneous_transformation_matrix.h
python/: .gitignore  main.py
python/basic_camera_model/: requirements.txt
python/basic_camera_model/utils/: camera_model.py  fps_counter.py
python/playground_camera_model/: camera_model.py  clipping_space.py  color.py  cube.py  matrix_functions.py  rectangle.py  render_faces.py  structure.py  window.py
unit_tests/: CMakeLists.txt  example_class_test.cc
